full pipeline testing